
Added:
  - Configured to use four spaces for indentation.
  - Show column number in the mode line.
  - Highlight trailing whitespaces in prog-mode, conf-mode and text-mode.
  - Support optional local file loaded in the end of the initialization.
  - Highlight Rust and PHP programming languages syntax.
  - Add rust-mode key bindings.
  - Add rainbow-mode package for color names colorization.

Changed:
  - Frames default width slightly balanced.
  - Use package exec-path-from-shell to load user's shell environment variables.
  - markdown-mode: use multimarkdown parser (if available).
  - Rename private-init.el to local-pre-init.el to reflect order of loading.
  - Improve minibuffer usability.
  - Improve misterioso-theme colors for better usability.

Fixed:
  - Minor modes enabling.


** v1.0.0 - 2021-02-21

Configuration improved for text manipulation tasks.

Compatible with Emacs 27.

Tested on Mac OS X only, so may need minor changes on other OSes.
(Known issue: early-init.el sets Mac OS specific font).

Added:
  - Script to auto-install required packages.
  - More documentation and comments.
  - private-init.el support.
  - Improved integration with Mac OS X:
    - Fixed deletion of files to Trash.
    - Added functions/key binding to open Finder.
  - Markdown-mode.
  - Better Org-mode preview.
  - Editing convenience tools.
  - Spell checking support.
    - On request and on-the-fly spell checking.
    - Command to facilitate Grammarly website opening.
  - Example basic configurations of different mail clients.
  - Command to rotate windows buffers of an active frame.
  - Enable built-in minibuffer completion (ido-mode, fido-mode).
  - Enable a better built-in package to manage open buffers: ibuffer.

Changed:
  - Split configuration into separate files.
  - By default use theme 'misterioso, instead of 'tango-dark.
  - Use ratio to set frames size, instead of pixels.

Removed:
  - Emacs 26 compatibility.
  - Line by line scrolling.